// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`positionsTableHeadersConf > is correct in groupview 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "handle grabbable",
    "sortable": false,
    "style": {
      "minWidth": "200px",
    },
    "text": "Machine locations",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": false,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": true,
    "sortable": false,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "sortable": false,
    "style": {
      "min-width": "400px",
    },
    "text": "Stop reasons",
    "textKey": "stopReasonNames",
  },
  {
    "sortable": false,
    "style": {
      "min-width": "400px",
    },
    "text": "Speed loss reasons",
    "textKey": "performanceReasonNames",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`positionsTableHeadersConf > is correct in listview 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "prependIcon": [Function],
    "prependIconClass": "",
    "sortable": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Machine locations",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": false,
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "sortable": true,
    "style": {
      "min-width": "400px",
    },
    "text": "Stop reasons",
    "textKey": "stopReasonNames",
  },
  {
    "sortable": true,
    "style": {
      "min-width": "400px",
    },
    "text": "Speed loss reasons",
    "textKey": "performanceReasonNames",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;
